--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   hive_flutter: ^1.1.0
   miniplayer: ^1.0.1
   marquee: ^2.2.1
+  simple_gradient_text: ^1.2.2
+  shared_preferences: ^2.0.12
+  scaffold_gradient_background: ^1.0.3+1
 
 dev_dependencies:
   flutter_test:
